--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
 </body>
 </html> -->
 
-<section class="hero-section" style="display: flex; flex-direction: column;">
+<!-- <section class="hero-section" style="display: flex; flex-direction: column;">
   <div class="video-container" style="position: relative; width: 100%; height: 881px;">
     <span>{{template-1}}</span>
     <span>{{template-2}}</span>
@@ -88,4 +88,76 @@
       <span>{{template-17}}</span>
     </div>
   </div>
-</section>
+</section> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Clean Computed Styles JSON</title>
+  <style>
+    body { font-family: sans-serif; padding: 20px; }
+    textarea { width: 100%; height: 300px; font-family: monospace; margin-bottom: 20px; }
+    button { padding: 10px 20px; font-size: 16px; }
+  </style>
+</head>
+<body>
+  <h2>Remove Default Browser Styles from JSON</h2>
+  <p>Paste your full JSON for one section below:</p>
+  <textarea id="inputJson" placeholder="Paste JSON here..."></textarea>
+  <br>
+  <button onclick="cleanStyles()">Clean Styles</button>
+  <h3>Cleaned Output:</h3>
+  <textarea id="outputJson" placeholder="Result will appear here..."></textarea>
+
+  <script>
+    const browserDefaults = [
+      'margin', 'padding', 'border', 'outline', 'box-sizing',
+      'font-family', 'font-size', 'font-weight', 'line-height',
+      'color', 'background', 'background-color',
+      'display', 'visibility', 'overflow', 'position',
+      'top', 'left', 'right', 'bottom',
+      'text-align', 'vertical-align', 'white-space',
+      'z-index', 'float', 'clear', 'opacity',
+      'height', 'width', 'min-height', 'min-width', 'max-height', 'max-width'
+    ];
+
+    function cleanObject(obj) {
+      if (!obj || typeof obj !== 'object') return;
+
+      for (const key in obj) {
+        if (typeof obj[key] === 'object') {
+          const node = obj[key];
+
+          // Remove browser default styles
+          if (node.styles && typeof node.styles === 'object') {
+            for (const prop of browserDefaults) {
+              delete node.styles[prop];
+            }
+          }
+
+          // Recursively clean children
+          if (Array.isArray(node.children)) {
+            node.children.forEach(child => cleanObject(child));
+          }
+
+          // Continue deep traversal for nested section/div/etc.
+          cleanObject(node);
+        }
+      }
+    }
+
+    function cleanStyles() {
+      const input = document.getElementById('inputJson').value;
+      try {
+        const parsed = JSON.parse(input);
+        cleanObject(parsed);
+        document.getElementById('outputJson').value = JSON.stringify(parsed, null, 2);
+      } catch (e) {
+        alert("❌ Invalid JSON! Please check your structure.");
+      }
+    }
+  </script>
+</body>
+</html>
+
