added page for bare minimum html

--- a/app/dummy.html
+++ b/app/dummy.html
@@ -1,4 +1,4 @@
-import { NextResponse } from 'next/server';
+<!-- import { NextResponse } from 'next/server';
 
 // Function to parse HTML and extract elements with their attributes
 function parseHtmlElements(html) {
@@ -423,4 +423,82 @@ Return ONLY the bare minimum HTML code with complete inline styles and ALL TEMPL
       method: 'fallback_direct_analysis'
     }, { status: 200 }); // Return 200 since we have fallback result
   }
-}
+} -->
+ <section id="comp-lt8qhfaf1" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 4; grid-row-start: 3; height: 1218px; left: 0px; min-height: auto; min-width: 980px; position: relative; right: 0px; top: 0px;">
+    <div id="bgLayers_comp-lt8qhfaf1" style="bottom: 0px; height: 1218px; left: 0px; position: absolute; right: 0px; top: 0px;">
+        <div data-testid="colorUnderlay" style="bottom: 0px; height: 1218px; left: 0px; position: absolute; right: 0px; top: 0px;"></div>
+        <div id="bgMedia_comp-lt8qhfaf1" style="height: 1218px;"></div>
+    </div>
+    <div data-mesh-id="comp-lt8qhfaf1inlineContent" data-testid="inline-content" style="bottom: 0px; height: 1218px; left: 0px; position: relative; right: 0px; top: 0px;">
+        <div data-mesh-id="comp-lt8qhfaf1inlineContent-gridContainer" data-testid="mesh-container-content" style="display: grid; grid-template-columns: 1935px; grid-template-rows: 1218px; height: 1218px;">
+            <section id="comp-irqduxas" style="align-self: start; bottom: 0px; display: flex; grid-column-end: 2; grid-column-start: 1; grid-row-end: 2; grid-row-start: 1; height: 1218px; left: 0px; min-height: auto; min-width: 980px; position: relative; right: 0px; top: 0px;">
+                <div id="bgLayers_comp-irqduxas" style="bottom: 0px; height: 1218px; left: 0px; position: absolute; right: 0px; top: 0px;">
+                    <div data-testid="colorUnderlay" style="bottom: 0px; height: 1218px; left: 0px; position: absolute; right: 0px; top: 0px;"></div>
+                    <div id="bgMedia_comp-irqduxas" style="height: 1218px;"></div>
+                </div>
+                <div data-testid="columns" style="bottom: 0px; column-gap: 0px; display: flex; height: 1218px; left: 0px; min-height: auto; min-width: auto; position: relative; right: 0px; top: 0px;">
+                    <div id="comp-irqduxaw" style="bottom: 0px; flex-basis: 0%; flex-grow: 980; height: 1218px; left: 0px; min-height: auto; position: relative; right: 0px; top: 0px;">
+                        <div id="bgLayers_comp-irqduxaw" style="bottom: 0px; height: 1218px; left: 0px; position: absolute; right: 0px; top: 0px;">
+                            <div data-testid="colorUnderlay" style="background-color: rgb(242, 247, 255); bottom: 0px; height: 1218px; left: 0px; position: absolute; right: 0px; top: 0px;"></div>
+                            <div id="bgMedia_comp-irqduxaw" style="height: 1218px;"></div>
+                        </div>
+                        <div data-mesh-id="comp-irqduxawinlineContent" data-testid="inline-content" style="bottom: 0px; height: 1218px; left: 0px; position: relative; right: 0px; top: 0px;">
+                            <div data-mesh-id="comp-irqduxawinlineContent-gridContainer" data-testid="mesh-container-content" style="display: grid; grid-template-columns: 1935px; grid-template-rows: 199px 50px 30px 61px 45px 0px 198px 0px 0px 106px 32px 44px 62px 234px 157px; height: 1218px; min-height: 1218px;">
+                                <div id="comp-irtb3bz7" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 2; grid-row-start: 1; height: 47px; left: 115px; min-height: auto; min-width: auto; position: relative; right: -115px; top: 0px; width: 746px;">
+                                    <div>{{template-17}}</div>
+                                </div>
+                                <div id="comp-irsxtu2g" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 3; grid-row-start: 2; height: 24px; left: 35px; min-height: auto; min-width: auto; position: relative; right: -35px; top: 0px; width: 24px;">
+                                    <div>{{template-18}}</div>
+                                </div>
+                                <div id="comp-irsxtr31" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 4; grid-row-start: 3; height: 24px; left: 20px; min-height: auto; min-width: auto; position: relative; right: -20px; top: 0px; width: 24px;">
+                                    <div>{{template-19}}</div>
+                                </div>
+                                <div id="comp-irsxsok1" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 5; grid-row-start: 4; height: 24px; left: 42px; min-height: auto; min-width: auto; position: relative; right: -42px; top: 0px; width: 24px;">
+                                    <div>{{template-20}}</div>
+                                </div>
+                                <div id="comp-iruwiqnd" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 7; grid-row-start: 3; height: 188px; left: 115px; min-height: auto; min-width: auto; position: relative; right: -115px; top: 0px; width: 239px;">
+                                    <div>{{template-21}}</div>
+                                </div>
+                                <div id="comp-iruwjbi6" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 8; grid-row-start: 7; height: 188px; left: 267px; min-height: auto; min-width: auto; position: relative; right: -267px; top: 0px; width: 239px;">
+                                    <div>{{template-22}}</div>
+                                </div>
+                                <div id="comp-isejjlss" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 6; grid-row-start: 5; height: 26px; left: 372px; min-height: auto; min-width: auto; position: relative; right: -372px; top: 0px; width: 29px;">
+                                    <div>{{template-23}}</div>
+                                </div>
+                                <div id="comp-isehzfd9" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 8; grid-row-start: 7; height: 54px; left: 197px; min-height: auto; min-width: auto; position: relative; right: -197px; top: 0px; width: 50px;">
+                                    <div>{{template-24}}</div>
+                                </div>
+                                <div id="comp-irqduxb1" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 5; grid-row-start: 4; height: 47px; left: 558px; min-height: auto; min-width: auto; position: relative; right: -558px; top: 0px; width: 304px;">
+                                    <div>{{template-25}}</div>
+                                </div>
+                                <div id="comp-irqduxb4" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 10; grid-row-start: 5; height: 224px; left: 558px; min-height: auto; min-width: auto; position: relative; right: -558px; top: 0px; width: 290px;">
+                                    <div>{{template-26}}</div>
+                                </div>
+                                <div id="comp-iruxih60" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 12; grid-row-start: 11; height: 32px; left: 526px; min-height: auto; min-width: auto; position: relative; right: -526px; top: 0px; width: 35px;">
+                                    <div>{{template-27}}</div>
+                                </div>
+                                <div id="comp-irqduxbr" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 14; grid-row-start: 13; height: 47px; left: 150px; min-height: auto; min-width: auto; position: relative; right: -150px; top: 0px; width: 287px;">
+                                    <div>{{template-28}}</div>
+                                </div>
+                                <div id="comp-irsw090n" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 15; grid-row-start: 14; height: 224px; left: 150px; min-height: auto; min-width: auto; position: relative; right: -150px; top: 0px; width: 287px;">
+                                    <div>{{template-29}}</div>
+                                </div>
+                                <div id="comp-isejkuti" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 13; grid-row-start: 12; height: 26px; left: 500px; min-height: auto; min-width: auto; position: relative; right: -500px; top: 0px; width: 29px;">
+                                    <div>{{template-30}}</div>
+                                </div>
+                                <div id="comp-iruxgy2h" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 16; grid-row-start: 12; height: 338px; left: 538px; min-height: auto; min-width: auto; position: relative; right: -538px; top: 0px; width: 318px;">
+                                    <div>{{template-31}}</div>
+                                </div>
+                                <div data-mesh-id="comp-irqduxawinlineContent-wedge-11" style="grid-column-end: 2; grid-column-start: 1; grid-row-end: 11; grid-row-start: 1; height: 689px; min-height: auto; min-width: auto; width: 0px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div id="comp-irte6ovt" style="align-self: start; bottom: 0px; grid-column-end: 2; grid-column-start: 1; grid-row-end: 2; grid-row-start: 1; height: 90px; left: 0px; min-height: auto; min-width: auto; position: relative; right: 0px; top: 0px;">
+                <div id="howitworks"></div>
+                <div>{{template-32}}</div>
+            </div>
+        </div>
+    </div>
+</section>
